--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     buildToolsVersion "29.0.2"
 
     defaultConfig {
-        applicationId "com.casino.ku.app"
+        applicationId "com.ku.bet.888"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
