--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "29.0.2"
 
     defaultConfig {
-        applicationId "com.ku.bet.888"
+        applicationId "com.ku.bet.casino8"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
